tests/neg-custom-args/captures/i21347.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i21347.scala:8:2 -----------------------------------------
8 |  () => runOps(f :: Nil) // error
  |  ^^^^^^^^^^^^^^^^^^^^^^
  |  Found:    () ->{f} Unit
  |  Required: () -> Unit
  |
  |  Note that capability `f` cannot flow into capture set {}.
  |
  | longer explanation available when compiling with `-explain`
